--- a/drive.google.com/game-player.html
+++ b/drive.google.com/game-player.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Player</title>
+    <title>Google Classroom</title>
+    <link rel="icon" href="https://www.gstatic.com/images/branding/product/1x/classroom_48dp.png">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
     <style>
         * {
