--- a/drive.google.com/index.html
+++ b/drive.google.com/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Games Hub</title>
+    <title>Google Classroom</title>
+    <link rel="icon" href="https://www.gstatic.com/images/branding/product/1x/classroom_48dp.png">
     <style>
         * {
             margin: 0;
@@ -296,6 +297,7 @@
 
         <div class="controls">
             <button class="btn btn-primary" onclick="openUploadModal()">📤 Upload Game</button>
+            <button class="btn btn-primary" onclick="window.location.href='game-player.html'">▶️ Open Game Player</button>
             <button class="btn btn-secondary" onclick="syncLocalStorage()">🔄 Refresh Games</button>
         </div>
 
