--- a/drive.google.com/index.html
+++ b/drive.google.com/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Classroom</title>
+    <title>classroom 8x</title>
     <link rel="icon" href="favicon.svg" type="image/svg+xml">
     <style>
         * {
@@ -93,7 +93,7 @@
         .container {
             display: flex;
             max-width: 1400px;
-            margin: 0 auto;
+            margin: 0;
         }
 
         .sidebar {
@@ -381,7 +381,7 @@
                 <div class="logo-block logo-green"></div>
             </div>
         </div>
-        <h1>Game Hub</h1>
+        <h1>classroom 8x</h1>
         <p>Play amazing games instantly</p>
     </div>
 
