--- a/drive.google.com/index.html
+++ b/drive.google.com/index.html
@@ -23,17 +23,61 @@
 
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-            background: #1a1a2e;
+            background: linear-gradient(135deg, #1a1a2e 0%, #16213e 100%);
             color: #eaeaea;
             min-height: 100vh;
+            animation: fadeIn 0.6s ease-out;
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+            }
+            to {
+                opacity: 1;
+            }
         }
 
         .header {
-            background: #16213e;
+            background: linear-gradient(135deg, #16213e 0%, #0f3460 100%);
             color: #eaeaea;
             padding: 30px 20px;
             text-align: center;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.3);
+            box-shadow: 0 8px 32px rgba(0,0,0,0.4);
+            animation: slideDown 0.6s ease-out;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .header::after {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(90deg, transparent, rgba(233, 69, 96, 0.1), transparent);
+            animation: shimmer 3s infinite;
+        }
+
+        @keyframes slideDown {
+            from {
+                opacity: 0;
+                transform: translateY(-20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        @keyframes shimmer {
+            0% {
+                left: -100%;
+            }
+            100% {
+                left: 100%;
+            }
         }
 
         .logo-container {
@@ -56,22 +100,54 @@
 
         .soundboard-button {
             padding: 8px 12px;
-            background: #0f3460;
+            background: linear-gradient(135deg, #0f3460 0%, #1a1a2e 100%);
             color: #eaeaea;
-            border: 1px solid #0f3460;
+            border: 1.5px solid #e94560;
             border-radius: 8px;
             cursor: pointer;
             font-weight: 600;
+            transition: all 0.3s ease;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .soundboard-button::before {
+            content: "";
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 0;
+            height: 0;
+            background: rgba(233, 69, 96, 0.3);
+            border-radius: 50%;
+            transform: translate(-50%, -50%);
+            transition: width 0.6s, height 0.6s;
+        }
+
+        .soundboard-button:hover::before {
+            width: 300px;
+            height: 300px;
+        }
+
+        .soundboard-button:hover {
+            background: linear-gradient(135deg, #e94560 0%, #ff5a75 100%);
+            box-shadow: 0 4px 16px rgba(233, 69, 96, 0.5);
+            transform: translateY(-2px);
+        }
+
+        .soundboard-button:active {
+            transform: translateY(0);
         }
 
         .gc-logo {
             width: 56px;
             height: 46px;
             border-radius: 10px;
-            background: #34A853; /* outer green */
+            background: #34A853;
             display: inline-block;
             position: relative;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.25);
+            box-shadow: 0 4px 16px rgba(52, 168, 83, 0.4);
+            animation: float 3s ease-in-out infinite, pulse 2s ease-in-out infinite;
         }
 
         .gc-logo::before {
@@ -82,7 +158,8 @@
             right: 6px;
             bottom: 10px;
             border-radius: 6px;
-            background: #f4d03f; /* inner yellow panel */
+            background: #f4d03f;
+            transition: transform 0.3s ease;
         }
 
         .gc-logo::after {
@@ -93,19 +170,63 @@
             right: 10px;
             bottom: 14px;
             border-radius: 4px;
-            background: #2b6a3a; /* darker inner area */
+            background: #2b6a3a;
+            transition: transform 0.3s ease;
+        }
+
+        .gc-logo:hover::before {
+            transform: scale(1.05);
+        }
+
+        .gc-logo:hover::after {
+            transform: scale(1.05);
+        }
+
+        @keyframes float {
+            0%, 100% {
+                transform: translateY(0px);
+            }
+            50% {
+                transform: translateY(-8px);
+            }
+        }
+
+        @keyframes pulse {
+            0%, 100% {
+                box-shadow: 0 4px 16px rgba(52, 168, 83, 0.4);
+            }
+            50% {
+                box-shadow: 0 4px 24px rgba(52, 168, 83, 0.7);
+            }
         }
 
         .header h1 {
             font-size: 3em;
             margin: 0;
             font-weight: 700;
+            animation: slideUp 0.6s ease-out 0.2s backwards;
+            background: linear-gradient(135deg, #ffffff 0%, #e94560 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
         }
 
         .header p {
             opacity: 0.9;
             font-size: 1.3em;
             margin-top: 8px;
+            animation: slideUp 0.6s ease-out 0.4s backwards;
+        }
+
+        @keyframes slideUp {
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
 
         .container {
@@ -116,14 +237,26 @@
 
         .sidebar {
             width: 220px;
-            background: #16213e;
-            border-right: 1px solid #0f3460;
+            background: linear-gradient(180deg, #16213e 0%, #0f3460 100%);
+            border-right: 1px solid rgba(233, 69, 96, 0.2);
             padding: 20px;
             min-height: calc(100vh - 120px);
             position: sticky;
             top: 0;
             max-height: 100vh;
             overflow-y: auto;
+            animation: slideInLeft 0.6s ease-out;
+        }
+
+        @keyframes slideInLeft {
+            from {
+                opacity: 0;
+                transform: translateX(-30px);
+            }
+            to {
+                opacity: 1;
+                transform: translateX(0);
+            }
         }
 
         .sidebar h3 {
@@ -147,24 +280,45 @@
             width: 100%;
             padding: 12px 14px;
             border: none;
-            background: #0f3460;
+            background: linear-gradient(135deg, rgba(15, 52, 96, 0.6) 0%, rgba(15, 52, 96, 0.3) 100%);
             color: #eaeaea;
             text-align: left;
-            border-radius: 6px;
+            border-radius: 8px;
             cursor: pointer;
             font-size: 1.1em;
             transition: all 0.3s ease;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .sidebar-list button::before {
+            content: "";
+            position: absolute;
+            left: -100%;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(233, 69, 96, 0.2);
+            transition: left 0.3s ease;
+            z-index: -1;
         }
 
         .sidebar-list button:hover {
-            background: #e94560;
+            background: linear-gradient(135deg, #e94560 0%, #ff5a75 100%);
             color: white;
+            transform: translateX(4px);
+            box-shadow: 0 4px 12px rgba(233, 69, 96, 0.3);
+        }
+
+        .sidebar-list button:hover::before {
+            left: 0;
         }
 
         .sidebar-list button.active {
-            background: #e94560;
+            background: linear-gradient(135deg, #e94560 0%, #ff5a75 100%);
             color: white;
             font-weight: 600;
+            box-shadow: 0 4px 12px rgba(233, 69, 96, 0.5);
         }
 
         .search-box {
@@ -175,22 +329,41 @@
             width: 100%;
             padding: 12px 14px;
             border: 1px solid #0f3460;
-            border-radius: 6px;
+            border-radius: 8px;
             font-size: 1em;
-            transition: border-color 0.3s ease;
-            background: #0f3460;
+            transition: all 0.3s ease;
+            background: rgba(15, 52, 96, 0.5);
             color: #eaeaea;
+        }
+
+        .search-box input::placeholder {
+            color: rgba(234, 234, 234, 0.5);
+            transition: color 0.3s ease;
         }
 
         .search-box input:focus {
             outline: none;
             border-color: #e94560;
+            background: rgba(15, 52, 96, 0.8);
             box-shadow: 0 0 0 3px rgba(233, 69, 96, 0.2);
+            transform: translateY(-2px);
         }
 
         .main-content {
             flex: 1;
             padding: 40px;
+            animation: slideInRight 0.6s ease-out;
+        }
+
+        @keyframes slideInRight {
+            from {
+                opacity: 0;
+                transform: translateX(30px);
+            }
+            to {
+                opacity: 1;
+                transform: translateX(0);
+            }
         }
 
         .section-title {
@@ -198,6 +371,34 @@
             margin-bottom: 30px;
             color: #eaeaea;
             font-weight: 600;
+            animation: slideUp 0.6s ease-out;
+            background: linear-gradient(135deg, #ffffff 0%, #e94560 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+            position: relative;
+            padding-bottom: 12px;
+        }
+
+        .section-title::after {
+            content: "";
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 60px;
+            height: 3px;
+            background: linear-gradient(90deg, #e94560 0%, transparent 100%);
+            border-radius: 2px;
+            animation: slideRight 0.6s ease-out 0.3s backwards;
+        }
+
+        @keyframes slideRight {
+            from {
+                width: 0;
+            }
+            to {
+                width: 60px;
+            }
         }
 
         .games-grid {
@@ -205,24 +406,66 @@
             grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
             gap: 30px;
             margin-bottom: 40px;
+            animation: slideUp 0.6s ease-out 0.2s backwards;
         }
 
         .game-card {
-            background: #16213e;
+            background: linear-gradient(135deg, #16213e 0%, #0f3460 100%);
             border-radius: 16px;
             overflow: hidden;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.3);
+            box-shadow: 0 4px 16px rgba(0,0,0,0.3);
             cursor: pointer;
-            transition: all 0.3s ease;
-            border: 1px solid #0f3460;
+            transition: all 0.4s cubic-bezier(0.34, 1.56, 0.64, 1);
+            border: 1px solid rgba(233, 69, 96, 0.2);
             position: relative;
             aspect-ratio: 1;
+            animation: cardPop 0.6s ease-out backwards;
+        }
+
+        .game-card:nth-child(1) { animation-delay: 0.1s; }
+        .game-card:nth-child(2) { animation-delay: 0.2s; }
+        .game-card:nth-child(3) { animation-delay: 0.3s; }
+        .game-card:nth-child(4) { animation-delay: 0.4s; }
+        .game-card:nth-child(5) { animation-delay: 0.5s; }
+        .game-card:nth-child(6) { animation-delay: 0.6s; }
+
+        @keyframes cardPop {
+            from {
+                opacity: 0;
+                transform: scale(0.8) translateY(20px);
+            }
+            to {
+                opacity: 1;
+                transform: scale(1) translateY(0);
+            }
+        }
+
+        .game-card::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: linear-gradient(135deg, rgba(233, 69, 96, 0.1) 0%, transparent 50%);
+            pointer-events: none;
+            z-index: 1;
+            opacity: 0;
+            transition: opacity 0.4s ease;
+        }
+
+        .game-card:hover::before {
+            opacity: 1;
         }
 
         .game-card:hover {
-            transform: translateY(-8px);
-            box-shadow: 0 8px 20px rgba(233, 69, 96, 0.3);
+            transform: translateY(-12px) scale(1.02);
+            box-shadow: 0 16px 40px rgba(233, 69, 96, 0.4);
             border-color: #e94560;
+        }
+
+        .game-card:active {
+            transform: translateY(-8px) scale(1.01);
         }
 
         .game-thumbnail {
@@ -249,15 +492,16 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: rgba(26, 26, 46, 0.95);
+            background: linear-gradient(135deg, rgba(26, 26, 46, 0.98) 0%, rgba(15, 52, 96, 0.98) 100%);
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
             padding: 20px;
             opacity: 0;
-            transition: opacity 0.3s ease;
+            transition: opacity 0.4s ease;
             border-radius: 16px;
+            backdrop-filter: blur(4px);
         }
 
         .game-card:hover .game-info {
@@ -270,6 +514,18 @@
             margin-bottom: 20px;
             color: #eaeaea;
             text-align: center;
+            animation: titleSlideUp 0.4s ease-out 0.2s backwards;
+        }
+
+        @keyframes titleSlideUp {
+            from {
+                opacity: 0;
+                transform: translateY(10px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
 
         .game-description {
@@ -279,7 +535,7 @@
         .game-button {
             width: 100%;
             padding: 14px 20px;
-            background: #e94560;
+            background: linear-gradient(135deg, #e94560 0%, #ff5a75 100%);
             color: white;
             border: none;
             border-radius: 8px;
@@ -287,12 +543,49 @@
             font-size: 1.2em;
             font-weight: 700;
             transition: all 0.3s ease;
+            position: relative;
+            overflow: hidden;
+            box-shadow: 0 4px 12px rgba(233, 69, 96, 0.4);
+            animation: buttonSlideUp 0.4s ease-out 0.3s backwards;
+        }
+
+        @keyframes buttonSlideUp {
+            from {
+                opacity: 0;
+                transform: translateY(10px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        .game-button::after {
+            content: "";
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 0;
+            height: 0;
+            background: rgba(255, 255, 255, 0.3);
+            border-radius: 50%;
+            transform: translate(-50%, -50%);
+            transition: width 0.6s, height 0.6s;
+        }
+
+        .game-button:hover::after {
+            width: 300px;
+            height: 300px;
         }
 
         .game-button:hover {
-            transform: scale(1.05);
-            box-shadow: 0 4px 12px rgba(233, 69, 96, 0.5);
-            background: #ff5a75;
+            transform: translateY(-2px);
+            box-shadow: 0 8px 24px rgba(233, 69, 96, 0.6);
+            background: linear-gradient(135deg, #ff5a75 0%, #ff7094 100%);
+        }
+
+        .game-button:active {
+            transform: translateY(0);
         }
 
         .empty-state {
@@ -300,11 +593,13 @@
             padding: 60px 20px;
             color: #aaa;
             grid-column: 1 / -1;
+            animation: fadeIn 0.4s ease-out;
         }
 
         .empty-state h2 {
             font-size: 1.8em;
             margin-bottom: 10px;
+            animation: slideUp 0.6s ease-out;
         }
 
         .modal-overlay {
@@ -314,14 +609,19 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: rgba(0, 0, 0, 0.7);
+            background: rgba(0, 0, 0, 0);
             z-index: 2000;
             align-items: center;
             justify-content: center;
+            transition: background 0.3s ease;
+            backdrop-filter: blur(0px);
         }
 
         .modal-overlay.active {
             display: flex;
+            background: rgba(0, 0, 0, 0.7);
+            backdrop-filter: blur(4px);
+            animation: fadeIn 0.3s ease-out;
         }
 
         .close-button {
@@ -330,19 +630,38 @@
             right: 20px;
             z-index: 2001;
             padding: 12px 20px;
-            background: #16213e;
+            background: linear-gradient(135deg, #16213e 0%, #0f3460 100%);
             color: #eaeaea;
-            border: 1px solid #e94560;
-            border-radius: 6px;
+            border: 2px solid #e94560;
+            border-radius: 8px;
             cursor: pointer;
             font-weight: 600;
             font-size: 0.95em;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.3);
+            box-shadow: 0 4px 12px rgba(0,0,0,0.4);
+            transition: all 0.3s ease;
+            animation: scaleIn 0.3s ease-out;
+        }
+
+        @keyframes scaleIn {
+            from {
+                opacity: 0;
+                transform: scale(0.8);
+            }
+            to {
+                opacity: 1;
+                transform: scale(1);
+            }
         }
 
         .close-button:hover {
-            background: #e94560;
+            background: linear-gradient(135deg, #e94560 0%, #ff5a75 100%);
             color: white;
+            transform: translateY(-2px);
+            box-shadow: 0 6px 20px rgba(233, 69, 96, 0.5);
+        }
+
+        .close-button:active {
+            transform: translateY(0);
         }
 
         iframe {
