Rename Unity game folders and fix local loader paths

--- a/drive.google.com/mr-racer/index.html
+++ b/drive.google.com/mr-racer/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>MR RACER</title>
-    <link rel="shortcut icon" href="TemplateData/favicon.ico">
-    <link rel="stylesheet" href="TemplateData/style.css">
+    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="stylesheet" href="style.css">
 
 <style>	
       @import url('https://fonts.googleapis.com/css2?family=Heebo:wght@200;500&display=swap');	
@@ -38,7 +38,7 @@
     <div id="unity-fullscreen-button" style="display: none;"></div>
     <script>
       const hideFullScreenButton = "";
-      const buildUrl = "Build";
+      const buildUrl = ".";
       const loaderUrl = buildUrl + "/MRR_GameMonetize.loader.js";
       const config = {
         dataUrl: buildUrl + "/f5713a2e01d39137e2a9273fe8260289.data.unityweb",
