--- a/drive.google.com/subway-surfers/index.html
+++ b/drive.google.com/subway-surfers/index.html
@@ -24,7 +24,7 @@
             numScreenshots: 4,
 
             unityVersion: '2019.2.0f1',
-            unityWebglBuildUrl: 'Build\/StPetersburg.json',
+            unityWebglBuildUrl: 'StPetersburg.json',
 
             fileSize: 35,
             cachedDecompressedFileSizes: {
@@ -40,7 +40,7 @@
 </head>
 
 <body>
-    <script src="./loaders/v3/master-loader.js"></script>
+    <script src="./master-loader.js"></script>
 
     <script type="text/javascript">
         window.SDK_OPTIONS = {
